with test inn the code

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                 <article>
                     <header>
-                        <h1>StageVita</h1>
+                        <h1>stageVita GitHub test</h1>
                         <p>stage = theater &amp; Vita = life so stageVita is your Stage life</p>
                         <p> The Theatrical resume is the tool you use to obtain roles, lighting gigs, director roles. The problem you face is the resume is in constant flux new roles are added, out dated ones are removed, your photo needs to change as they mature. Currently most theater people have this info scattered all over in paper and as data on a variety of systems.</p>
                     </header>
